signin and signup page mostly done along with some fixes on the layout page.

--- a/restaurants/views/layout.erb
+++ b/restaurants/views/layout.erb
@@ -19,24 +19,24 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="/about">About Us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               User Interactions
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Sign in</a>
-              <a class="dropdown-item" href="#">Sign up</a>
+              <a class="dropdown-item" href="/sign_in">Sign in</a>
+              <a class="dropdown-item" href="/sign_up">Sign up</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Profile Page</a>
+              <a class="dropdown-item" href="/profile/#{@user.id}">Profile Page</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Restaurants</a>
+            <a class="nav-link disabled" href="/restaurants">Restaurants</a>
           </li>
         </ul>
       </div>
