--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row centersignup">
   <div class="col-6 offset-3">
-    <form method="POST" action="/new_user">
+    <form method="POST" action="/new_user" class="formbackground">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" name="user[email]" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
@@ -11,11 +11,11 @@
       </div>
       <div class="form-group">
         <label for="first_name">First Name</label>
-        <input type="text" name="user[first_name]" class="form-control" id="first_name">
+        <input type="text" name="user[first_name]" class="form-control" id="first_name" placeholder="First Name">
       </div>
       <div class="form-group">
         <label for="last_name">Last Name</label>
-        <input type="text" name="user[last_name]" class="form-control" id="last_name">
+        <input type="text" name="user[last_name]" class="form-control" id="last_name" placeholder="Last Name">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
       <div>
