--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,16 @@
-<h1>hello</h1>
+<div class="jumbotron">
+  <h1 class="display-4">Eaters and Shitters</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+</div>
+<div class="images">
+	<img src="images/chefs_table.jpg" class="rounded float-center img1">
+	<img src="images/chefs_table_one.jpeg" class="rounded float-center img1">
+	<img src="images/vegan_restaurant.jpg" class="rounded float-center img1">
+	<img src="images/dom_chef.jpg" class="rounded float-center img1">
+</div>
+
+<div>
+	<footer>&copy; Copyright Lavin & Sammy 2018 </footer>
+</div>
