--- a/views/about.erb
+++ b/views/about.erb
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide aboutcarousel" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -6,31 +6,31 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-	  	<img src="images/chefs_table.jpg" alt="First slide" class="d-block w-100">
+	  	<img src="images/vegan_restaurant.jpg" alt="First slide" class="d-block w-100">
 			  <div class="carousel-caption d-none d-md-block">
-			    <h5>YOUR ONE AND ONLY SOURCE TO THE SCANDALOUS LIVES OF RESTAURANTS</h5>
-			    <p>serving the inner deats of the best restaurants and restrooms! Because it all maters!</p>
+			    <h5>YOUR ONE AND ONLY SOURCE TO THE INNER LOOP OF RESTAURANTS</h5>
+			    <p>serving the inmost deats of the best restaurants and restrooms! Because, it all maters!</p>
 			  </div>
 		</div>
     <div class="carousel-item">
-	  	<img src="images/vegan_restaurant.jpg" alt="Third slide">
-			  <div class="carousel-caption d-none d-md-block" class="d-block w-100">
+	  	<img src="images/dom_chef.jpg" alt="Third slide" class="d-block w-100">
+			  <div class="carousel-caption d-none d-md-block" >
 			    <h5>FOR BEST</h5>
-			    <p>...</p>
+			    <p>not only you'd be in the know of the restaurants. You'll feel upmost confident anywhere you go!</p>
 			  </div>
 		</div>
     <div class="carousel-item">
-	  	<img src="images/best_public_restoom.jpg" alt="Second slide" class="d-block w-100">
+	  	<img src="images/sushi_chef.jpg" alt="Second slide" class="d-block w-100">
 			  <div class="carousel-caption d-none d-md-block">
-			    <h5>..OR WORST </h5>
+			    <h5>OR WORST</h5>
 			    <p>most online rating pages may rate restraunts on popularity and taste. But good service shouldn't only be for the table</p>
 			  </div>
 		</div>
 		<div class="carousel-item">
-	  	<img src="images/restroom_two.jpg" alt="Third slide">
-			  <div class="carousel-caption d-none d-md-block" class="d-block w-100">
+	  	<img src="images/ben_s_chef_table.jpg" alt="Third slide" class="d-block w-100">
+			  <div class="carousel-caption d-none d-md-block" >
 			    <h5>ONE AND ONLY SOURCE WHO RATES RESTROOMS AS MUCH OF THE RESTROOM.</h5>
-			    <p>...</p>
+			    <p>sign up today! Honestly, you won't get service like this!</p>
 			  </div>
 		</div>
   </div>
@@ -43,4 +43,6 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<footer>&copy; Copyright Lavin & Sammy 2018 </footer>
+
+
+<!-- <footer>&copy; Copyright Lavin & Sammy 2018 </footer> -->
