--- a/views/home.erb
+++ b/views/home.erb
@@ -1,16 +1,34 @@
 <div class="jumbotron">
   <h1 class="display-4">Eaters and Shitters</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">We judge the eats and the shits!</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>Michelin stars or a quick yelp rating may increase the chances of good dining. But what about everything else?</p>
 </div>
-<div class="images">
-	<img src="images/chefs_table.jpg" class="rounded float-center img1">
-	<img src="images/chefs_table_one.jpeg" class="rounded float-center img1">
-	<img src="images/vegan_restaurant.jpg" class="rounded float-center img1">
-	<img src="images/dom_chef.jpg" class="rounded float-center img1">
+<div class="container">
+	<div class="row">
+			<div class="col">
+				<img src="images/chefs_table.jpg" class="rounded img1">
+			</div>
+			<div class="col">
+				<img src="images/chefs_table_one.jpeg" class="rounded img1">
+			</div>
+	</div>
 </div>
-
-<div>
+<div class="description">
+	<h3>We are growing and EVERYONE loves us!</h3>
+	<p>Unlike yelp, we don't just focus on the little things. We listen to everything you have to say about a restaurant; the goods, bads, the front, the bathroom or if youre a customer or an employee...We listen to all and we don't grade on a grading curve!</p>
+</div>
+<div class="container">
+	<div class="row">
+			<div class="col">
+				<img src="images/vegan_restaurant.jpg" class="rounded img1">
+			</div>
+			<div class="col">
+				<img src="images/dom_chef.jpg" class="rounded img2">
+		</div>
+	</div>
+</div>
+	
+<!-- <div>
 	<footer>&copy; Copyright Lavin & Sammy 2018 </footer>
-</div>
+</div> -->
