--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
     <body>
   <% end %>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark"">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="/">E & S</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,7 +40,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="/restaurants">Restaurants</a>
+            <a class="nav-link" href="/restaurants">Restaurants</a>
           </li>
         </ul>
       </div>
