initail build on framework

--- a/views/restaurants.erb
+++ b/views/restaurants.erb
@@ -1,12 +1,12 @@
 <div class="jumbotron">
-  <h1 class="display-4">Eats and Shits</h1>
+  <h1 class="display-4">The Eats and The Shits</h1>
   <p class="lead">We've got plenty of restaurants and their bathrooms to choose from! And if you've been write a review!</p>
   <hr class="my-4">
 </div>
 
 <div class="container restaurantdrop">
 	<div class="row">
-		<div class="col- restaurantgrid"><img class="restaurantround" src="https://dummyimage.com/300x300/000/fff"></div>
+		<div class="col- restaurantgrid"><a href="/restaurant_profile"><img class="restaurantround" src="https://dummyimage.com/300x300/000/fff"></a></div>
 		<div class="col- restaurantgrid"><img class="restaurantround" src="https://dummyimage.com/300x300/000/fff"></div>
 		<div class="col- restaurantgrid"><img class="restaurantround" src="https://dummyimage.com/300x300/000/fff"></div>
 	</div>
