--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,8 @@ html, body {
 
 .signupbackground {
 	background-image: url(/images/paris.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 }
 
 .centersignin {
