--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">HELLO, <%= @first_name %></h1>
+    <h1 class="display-4">HELLO, <%= @user.first_name %></h1>
     <p class="lead">Let's get started</p>
   </div>
 </div>
