--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
               <a class="dropdown-item" href="/sign_in">Sign in</a>
               <a class="dropdown-item" href="/sign_up">Sign up</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/profile/#{@user.id}">Profile Page</a>
+              <a class="dropdown-item" href="/user_profile/#{@user.id}">Profile Page</a>
             </div>
           </li>
           <li class="nav-item">
