--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,6 +1,6 @@
 <div class="row centersignin">
   <div class="col-6 offset-3">
-    <form method="POST" action="/sign-in" class="formbackground">
+    <form method="POST" action="/sign_in" class="formbackground">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" name="user[email]" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
