--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -5,10 +5,11 @@
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="/images/profile_pictures.gif" alt="Card image cap">
+  <img class="card-img-top" src="/images/profile_picture_two.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"> <%= @first_name %> <%= @last_name %> </h5>
     <p class="card-text"> <%= @email %> </p>
+    <p class="card-text"> WELCOME! </p>
     <a href="#" class="btn btn-primary"><button type="button" class="btn btn-outline-primary">Update Profile</button></a>
   </div>
 </div>
