--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,6 @@
 html, body {
-/*	min-height: 100%;
-	min-width: 100%;*/
+	min-height: 100%;
+	min-width: 100%;
 /*	background: #ADA996;
   background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
   background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);*/
