--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Hello, world!</title>
   </head>
   <% if @body_class %>
@@ -36,7 +36,7 @@
               <a class="dropdown-item" href="/sign_in">Sign in</a>
               <a class="dropdown-item" href="/sign_up">Sign up</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/profile/#{@user.id}">Profile Page</a>
+              <a class="dropdown-item" href="/user_profile/#{@user.id}">Profile Page</a>
             </div>
           </li>
           <li class="nav-item">
@@ -54,6 +54,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html> 
