--- a/public/css/index.css
+++ b/public/css/index.css
@@ -49,7 +49,7 @@ form label {
 }
 
 .restaurantgrid {
-	margin: 10px;
+	margin-bottom: 10px;
 }
 
 .restaurantround {
@@ -108,4 +108,10 @@ form label {
 
 .card {
 	color: black;
+}
+
+.imageSize {
+	height: 100%;
+	width: 100%;
+	min-height: 195px;
 }
