--- a/views/restaurant_profile.erb
+++ b/views/restaurant_profile.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1 class="display-4">The Eats and The Shits</h1>
+  <h1 class="display-4"><%= restaurant.id %></h1>
   <hr class="my-4">
 </div>
 <div></div>
