--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,6 +39,12 @@
             <a class="nav-link" href="/restaurants">Restaurants</a>
           </li>
         </ul>
+        <% if user_signed_in? %>
+          <span class="navbar-text welcomeName">Welcome, <%= current_user.full_name %>   </span>
+          <a href="/sign-out" class="navbar-text">  Signout</a>
+        <% else %>
+          <a href="/sign_in" class="navbar-text"> Sign In</a>
+        <% end %>
       </div>
     </nav>
     
