--- a/public/css/index.css
+++ b/public/css/index.css
@@ -156,3 +156,10 @@ form label {
 	border-radius: 7px;
 	margin-bottom: 20px;
 }
+
+.comments {
+	background-color: rgba(0, 0, 0, 0.4);
+	text-align: center;
+	margin: 10px;
+	border-radius: 7px;
+}
