--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,6 +23,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About Us</a>
+          </li>          
+          <li class="nav-item">
+            <a class="nav-link" href="/latest_posts">Latest Posts</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
