--- a/views/update_profile.erb
+++ b/views/update_profile.erb
@@ -1,6 +1,6 @@
 <div class="row centersignup">
   <div class="col-6 offset-3">
-    <form method="POST" action="/new_user" class="formbackground">
+    <form method="POST" action="/update_profile" class="formbackground">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" name="user[email]" class="form-control" id="email" aria-describedby="emailHelp" value="<%= @user.email %>">
